--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "homepage": "https://sainarasimha37.github.io/portfolio",
   "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
